crates/ridl-backend-rust/src/snapshots/ridl_backend_rust__tests__internal_interface_generates_package_private_items.snap
---
source: crates/ridl-backend-rust/src/tests.rs
expression: rust_source
---
#[repr(transparent)]
pub struct Counter(pub i64);
impl Default for Counter {
    fn default() -> Self {
        Counter(0)
    }
}
/// Where a signal's current value came from (ridl §4.4, §4.5).
///
/// `Init` is the channel's seeded value, before the provider's first
/// publication; `Live` is a published value; `Invalid` marks a value
/// that violated the payload constraints — the malformed value is not
/// delivered, but its invalidity is, so no subscriber silently holds
/// stale last-good data.
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub enum Provenance {
    Init,
    Live,
    Invalid,
}
/// A signal channel: state that always holds a value (ridl §4.4).
pub trait SignalHandle<T> {
    /// The current value and where it came from. Never fails: the
    /// channel is seeded with the init value at creation.
    fn read(&self) -> (T, Provenance);
    /// Registers a subscriber. It is called immediately with the
    /// current value, then on every change.
    fn subscribe(&mut self, f: Box<dyn FnMut(&T, Provenance)>);
}
/// An event channel: occurrences, which are not state (ridl §5). There
/// is no `read` — an occurrence that has not happened has no value.
pub trait EventHandle<T> {
    fn subscribe(&mut self, f: Box<dyn FnMut(&T)>);
}
/// A finite or unbounded sequence of payloads (ridl §12).
///
/// Declared here rather than taken from a runtime crate so the
/// generated module stays dependency-free; it is shaped so an adapter
/// to `futures::Stream` is a blanket impl.
pub trait RidlStream {
    type Item;
    fn poll_next(
        self: core::pin::Pin<&mut Self>,
        cx: &mut core::task::Context<'_>,
    ) -> core::task::Poll<Option<Self::Item>>;
}
/// How a timing annotation constrains an interaction (ridl §9).
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub enum TimingMode {
    StrictPeriodic,
    Range,
}
/// One interaction's resolved timing, in exact microseconds.
///
/// `min_us` is the rate floor and `max_us` the staleness bound; a strict
/// period carries the same value in both. On a `command` or `query` the
/// same two bounds are the call throttle and the response bound
/// (ridl §9, ADR-0015 decision 3). `default_applied` records that
/// the contract was written without a `@` annotation and the configured
/// default was resolved in (ridl §9.1) — always `false` for an RPC,
/// whose bounds are never defaulted.
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub struct TimingConst {
    pub mode: TimingMode,
    pub min_us: Option<u64>,
    pub max_us: Option<u64>,
    pub default_applied: bool,
}
/// Which side of an interaction a contract clause constrains (ridl §13).
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub enum ContractKind {
    Require,
    Ensure,
}
/// One contract clause as data, for an observer to install.
///
/// `id` is the observer address the IR assigns; it is a stable identity
/// carried verbatim, not a Rust name. `uses_result` says whether the
/// clause reads the query's result, which an `ensure` observer must
/// know before it can be scheduled — it cannot run until the result
/// exists. The flag is carried rather than inferred: `source` is text,
/// so matching on it would misread a parameter named `resultCode` or a
/// field access `.result`, and an `ensure` clause does not always read
/// the result.
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub struct ContractStub {
    pub id: &'static str,
    pub kind: ContractKind,
    pub source: &'static str,
    pub signals: &'static [&'static str],
    pub params: &'static [&'static str],
    pub uses_result: bool,
}
/// The consumer face of `Hidden` — what a component that uses this interface calls (ridl §10.1).
#[allow(async_fn_in_trait)]
pub(crate) trait HiddenConsumer {
    /// signal `rawTicks` — ordinal 1 (ridl §4).
    /// The channel is never empty: a read before the provider's first publication yields `0`, and every read carries its provenance (`Init`, `Live`, or `Invalid` — ridl §4.4, §4.5).
    fn raw_ticks(&mut self) -> &mut dyn SignalHandle<Counter>;
    /// query `getBounds` — ordinal 2 (ridl §7).
    /// A transport failure is an infrastructure failure — detected, undeclared (gf §6.4): it is carried by runtime types, never by this signature.
    /// ensure: result.min <= result.max
    async fn get_bounds(&self) -> HiddenGetBoundsResult;
}
/// The provider face of `Hidden` — what a component that implements this interface fulfils (ridl §10.1). A `fixed` has no entry here: it is provisioned externally and populated at binding initialization (ridl §8).
#[allow(async_fn_in_trait)]
pub(crate) trait HiddenProvider {
    /// Publishes `rawTicks` — signal ordinal 1 (ridl §4).
    fn publish_raw_ticks(&mut self, value: Counter);
    /// Handles `getBounds` — query ordinal 2 (ridl §7).
    async fn on_get_bounds(&mut self) -> HiddenGetBoundsResult;
}
/// Resolved timing for every timed interaction of `Hidden`, keyed by the source name, in exact microseconds (ridl §9): rate floor and staleness bound on a signal or event, call throttle and response bound on a command or query (ADR-0015 decision 3).
pub(crate) const HIDDEN_TIMING: &[(&str, TimingConst)] = &[
    (
        "rawTicks",
        TimingConst {
            mode: TimingMode::StrictPeriodic,
            min_us: Some(10000),
            max_us: Some(10000),
            default_applied: false,
        },
    ),
];
/// Every `require` and `ensure` clause of `Hidden` as data, in source order, for an observer to install (ridl §13).
pub(crate) const HIDDEN_CONTRACTS: &[ContractStub] = &[
    ContractStub {
        id: "Hidden.getBounds.ensure[0]",
        kind: ContractKind::Ensure,
        source: "result.min <= result.max",
        signals: &[],
        params: &[],
        uses_result: true,
    },
];
/// The consumer face of `Shown` — what a component that uses this interface calls (ridl §10.1).
#[allow(async_fn_in_trait)]
pub trait ShownConsumer {
    /// signal `cabinTemp` — ordinal 1 (ridl §4).
    /// The channel is never empty: a read before the provider's first publication yields `0`, and every read carries its provenance (`Init`, `Live`, or `Invalid` — ridl §4.4, §4.5).
    fn cabin_temp(&mut self) -> &mut dyn SignalHandle<Counter>;
    /// query `readSummary` — ordinal 2 (ridl §7).
    /// A transport failure is an infrastructure failure — detected, undeclared (gf §6.4): it is carried by runtime types, never by this signature.
    /// ensure: result >= ShownFloor
    async fn read_summary(&self) -> Counter;
    /// query `getBounds` — ordinal 3 (ridl §7).
    /// A transport failure is an infrastructure failure — detected, undeclared (gf §6.4): it is carried by runtime types, never by this signature.
    async fn get_bounds(&self) -> ShownGetBoundsResult;
}
/// The provider face of `Shown` — what a component that implements this interface fulfils (ridl §10.1). A `fixed` has no entry here: it is provisioned externally and populated at binding initialization (ridl §8).
#[allow(async_fn_in_trait)]
pub trait ShownProvider {
    /// Publishes `cabinTemp` — signal ordinal 1 (ridl §4).
    fn publish_cabin_temp(&mut self, value: Counter);
    /// Handles `readSummary` — query ordinal 2 (ridl §7).
    async fn on_read_summary(&mut self) -> Counter;
    /// Handles `getBounds` — query ordinal 3 (ridl §7).
    async fn on_get_bounds(&mut self) -> ShownGetBoundsResult;
}
/// Resolved timing for every timed interaction of `Shown`, keyed by the source name, in exact microseconds (ridl §9): rate floor and staleness bound on a signal or event, call throttle and response bound on a command or query (ADR-0015 decision 3).
pub const SHOWN_TIMING: &[(&str, TimingConst)] = &[
    (
        "cabinTemp",
        TimingConst {
            mode: TimingMode::Range,
            min_us: Some(50000),
            max_us: Some(500000),
            default_applied: false,
        },
    ),
];
/// Every `require` and `ensure` clause of `Shown` as data, in source order, for an observer to install (ridl §13).
pub const SHOWN_CONTRACTS: &[ContractStub] = &[
    ContractStub {
        id: "Shown.readSummary.ensure[0]",
        kind: ContractKind::Ensure,
        source: "result >= ShownFloor",
        signals: &[],
        params: &[],
        uses_result: true,
    },
];
/// The consumer face of `ServiceVehClusterDiag` — what a component that uses this interface calls (ridl §10.1).
#[allow(async_fn_in_trait)]
pub trait ServiceVehClusterDiagConsumer {
    /// signal `cabinTemp` — ordinal 1 (ridl §4).
    /// The channel is never empty: a read before the provider's first publication yields `0`, and every read carries its provenance (`Init`, `Live`, or `Invalid` — ridl §4.4, §4.5).
    fn cabin_temp(&mut self) -> &mut dyn SignalHandle<Counter>;
    /// query `readSummary` — ordinal 2 (ridl §7).
    /// A transport failure is an infrastructure failure — detected, undeclared (gf §6.4): it is carried by runtime types, never by this signature.
    /// ensure: result >= DiagFloor
    async fn read_summary(&self) -> Counter;
    /// query `getBounds` — ordinal 3 (ridl §7).
    /// A transport failure is an infrastructure failure — detected, undeclared (gf §6.4): it is carried by runtime types, never by this signature.
    async fn get_bounds(&self) -> ServiceVehClusterDiagGetBoundsResult;
}
/// The provider face of `ServiceVehClusterDiag` — what a component that implements this interface fulfils (ridl §10.1). A `fixed` has no entry here: it is provisioned externally and populated at binding initialization (ridl §8).
#[allow(async_fn_in_trait)]
pub trait ServiceVehClusterDiagProvider {
    /// Publishes `cabinTemp` — signal ordinal 1 (ridl §4).
    fn publish_cabin_temp(&mut self, value: Counter);
    /// Handles `readSummary` — query ordinal 2 (ridl §7).
    async fn on_read_summary(&mut self) -> Counter;
    /// Handles `getBounds` — query ordinal 3 (ridl §7).
    async fn on_get_bounds(&mut self) -> ServiceVehClusterDiagGetBoundsResult;
}
/// Resolved timing for every timed interaction of `ServiceVehClusterDiag`, keyed by the source name, in exact microseconds (ridl §9): rate floor and staleness bound on a signal or event, call throttle and response bound on a command or query (ADR-0015 decision 3).
pub const SERVICE_VEH_CLUSTER_DIAG_TIMING: &[(&str, TimingConst)] = &[
    (
        "cabinTemp",
        TimingConst {
            mode: TimingMode::Range,
            min_us: Some(50000),
            max_us: Some(500000),
            default_applied: false,
        },
    ),
];
/// Every `require` and `ensure` clause of `ServiceVehClusterDiag` as data, in source order, for an observer to install (ridl §13).
pub const SERVICE_VEH_CLUSTER_DIAG_CONTRACTS: &[ContractStub] = &[
    ContractStub {
        id: "veh.cluster.diag.readSummary.ensure[0]",
        kind: ContractKind::Ensure,
        source: "result >= DiagFloor",
        signals: &[],
        params: &[],
        uses_result: true,
    },
];
/// Every service this package declares: the deployment address and the
/// interface that answers at it (ridl §11) — one row per composed
/// interface, in slot order, so a service composing several interfaces
/// repeats its address (ridl §14.5).
///
/// The address is the contract's own dotted identity, carried verbatim;
/// the interface name is the generated Rust type prefix. For an inline
/// shape they differ by construction, and the address — not the type
/// name — is the identity the wire and the observers use.
pub const SERVICES: &[(&str, &str)] = &[
    ("veh.cluster.hidden", "Hidden"),
    ("veh.cluster.diag", "ServiceVehClusterDiag"),
];
pub(crate) struct HiddenGetBoundsResult {
    pub min: Counter,
    pub max: Counter,
}
impl Default for HiddenGetBoundsResult {
    fn default() -> Self {
        HiddenGetBoundsResult {
            min: Counter::default(),
            max: Counter::default(),
        }
    }
}
pub struct ShownGetBoundsResult {
    pub min: Counter,
    pub max: Counter,
}
impl Default for ShownGetBoundsResult {
    fn default() -> Self {
        ShownGetBoundsResult {
            min: Counter::default(),
            max: Counter::default(),
        }
    }
}
pub struct ServiceVehClusterDiagGetBoundsResult {
    pub min: Counter,
    pub max: Counter,
}
impl Default for ServiceVehClusterDiagGetBoundsResult {
    fn default() -> Self {
        ServiceVehClusterDiagGetBoundsResult {
            min: Counter::default(),
            max: Counter::default(),
        }
    }
}
