crates/ridl-backend-rust/src/snapshots/ridl_backend_rust__tests__result_union.snap
---
source: crates/ridl-backend-rust/src/tests.rs
expression: rust_for(decls)
---
/// Vehicle speed over ground
///
/// Quantization (`step`) is not checked by `new`.
#[repr(transparent)]
pub struct Speed(f64);
impl Speed {
    /// Constructs the value, enforcing its typl constraints.
    pub fn new(value: f64) -> Result<Self, ::ridl_rt::payload::Violation> {
        if value < 0.0 {
            return Err(::ridl_rt::payload::Violation {
                type_name: "Speed",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        if value > 250.0 {
            return Err(::ridl_rt::payload::Violation {
                type_name: "Speed",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        Ok(Self(value))
    }
    /// Constructs the value without checking its constraints.
    ///
    /// Safe: nothing here relies on the invariant for memory
    /// soundness. Use it only for a value already known to satisfy
    /// the contract.
    pub const fn new_unchecked(value: f64) -> Self {
        Self(value)
    }
    pub const fn get(self) -> f64 {
        self.0
    }
}
impl TryFrom<f64> for Speed {
    type Error = ::ridl_rt::payload::Violation;
    fn try_from(value: f64) -> Result<Self, Self::Error> {
        Self::new(value)
    }
}
impl From<Speed> for f64 {
    fn from(value: Speed) -> Self {
        value.0
    }
}
impl Default for Speed {
    fn default() -> Self {
        Speed::new_unchecked(0.0)
    }
}
#[repr(transparent)]
pub struct Counter(i64);
impl Counter {
    /// Constructs the value, enforcing its typl constraints.
    pub fn new(value: i64) -> Result<Self, ::ridl_rt::payload::Violation> {
        Ok(Self(value))
    }
    /// Constructs the value without checking its constraints.
    ///
    /// Safe: nothing here relies on the invariant for memory
    /// soundness. Use it only for a value already known to satisfy
    /// the contract.
    pub const fn new_unchecked(value: i64) -> Self {
        Self(value)
    }
    pub const fn get(self) -> i64 {
        self.0
    }
}
impl TryFrom<i64> for Counter {
    type Error = ::ridl_rt::payload::Violation;
    fn try_from(value: i64) -> Result<Self, Self::Error> {
        Self::new(value)
    }
}
impl From<Counter> for i64 {
    fn from(value: Counter) -> Self {
        value.0
    }
}
impl Default for Counter {
    fn default() -> Self {
        Counter::new_unchecked(0)
    }
}
#[repr(C)]
pub struct SensorReading {
    pub value: Speed,
}
impl Default for SensorReading {
    fn default() -> Self {
        SensorReading {
            value: Speed::default(),
        }
    }
}
#[repr(C)]
pub struct SensorFault {
    pub code: Counter,
}
impl Default for SensorFault {
    fn default() -> Self {
        SensorFault {
            code: Counter::default(),
        }
    }
}
pub enum SensorResult {
    /// Successful reading
    Ok(SensorReading),
    Err(SensorFault),
}
impl Default for SensorResult {
    fn default() -> Self {
        SensorResult::Ok(SensorReading::default())
    }
}
